<resources>
    <string name="app_name">contact-application</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="edit_contact">Edit contact</string>
    <string name="add_contact">Add contact</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="contacts">Contacts</string>
    <string name="delete">Delete</string>
    <string name="contact_info">Contact info</string>
    <string name="edit">Edit</string>
    <string name="clear_logs">Clear Logs</string>
    <string name="debug_console">Debug Console</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
</resources>