<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="84dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_background"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bannerCategory"
            android:layout_width="188dp"
            android:layout_height="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/category"
            android:textColor="#64665E"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/bannerTitle"
            android:layout_width="188dp"
            android:layout_height="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/title"
            android:textColor="#6F7C78"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bannerDescription"
            android:layout_width="188dp"
            android:layout_height="20dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/description"
            android:textColor="#889792"
            android:textSize="14sp" />
    </LinearLayout>


    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/bannerImage"
        android:layout_width="96dp"
        android:layout_height="56dp"
        app:roundedCornerRadius="8dp"/>

</LinearLayout>