<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6DAC8"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="203dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/add_contact"
        android:textAlignment="center"
        android:textColor="#798784"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="54dp"
        android:layout_height="31dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/name"
        android:textColor="#798784"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/nameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactImage"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:layout_width="154dp"
        android:layout_height="31dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/phone_number"
        android:textColor="#798784"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/phoneEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        app:layout_constraintVertical_bias="1.0" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/contactImage"
        android:layout_width="340dp"
        android:layout_height="340dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173"
        app:roundedCornerRadius="8dp" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_text_fields_background"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/name"
        android:padding="16dp"
        android:singleLine="true"
        android:textColor="#798784"
        android:textColorHint="#9CAFAA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactImage"
        app:layout_constraintVertical_bias="0.222" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/custom_text_fields_background"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="16dp"
        android:textColor="#798784"
        android:textColorHint="#9CAFAA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="235dp"
        android:layout_height="70dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="#EFBC9B"
        android:drawableLeft="@drawable/save"
        android:text="@string/save"
        android:textColor="#798784"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
